--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -42,3 +42,54 @@
   color: #58e910;
   border-color: #58e910;
 }
+
+.CreateArticle {
+  font-size: 14px;
+  color: #52C41A;
+  border: 1px solid #52C41A;
+  box-sizing: border-box;
+  border-radius: 5px;
+  padding: 5px 10px;
+}
+
+
+.Profile {
+  display: flex;
+  align-items: center;
+  margin-left: 25px;
+  margin-right: 25px;
+}
+
+.ProfileName {
+  font-size: 18px;
+  color: rgba(0, 0, 0, 0.85);
+}
+.ProfilePhoto {
+  position: relative;
+  flex-shrink: 0;
+  width: 46px;
+  height: 46px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-left: 13px;
+}
+
+.ProfilePhoto img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.LogOut {
+  cursor: pointer;
+  font-size: 18px;
+  color: rgba(0, 0, 0, 0.75);
+  border: 1px solid rgba(0, 0, 0, 0.75);
+  border-radius: 5px;
+  padding: 9px 18px;
+  background-color: #fff;
+}
